fixed bug with agree/disagree visibility; unbolded pointBox ctrls

--- a/less/new.less
+++ b/less/new.less
@@ -1333,7 +1333,7 @@ a:visited {
 .pointBoxActions {
 	font-size: @fontSizeActions;
     color: @grayTextLight; //@blue;
-    font-weight: bold;
+    //font-weight: bold;
 	margin-bottom:2px;
     margin-right:4px; 
     display:inline-block;
@@ -1342,11 +1342,20 @@ a:visited {
 
 .pointBoxStatLine {
     opacity: .6; //goes to 1 on hover
+    font-weight: bold;
 }
 
 .pointCard:hover .pointBoxStatLine {
     opacity: 1;
+    font-weight: bold;
 }
+
+.pointCard:hover .pointBoxActions {
+
+}
+
+
+
 .pointCard:hover {
     background-color: rgb(244, 253, 255);
 }
@@ -1394,11 +1403,18 @@ a:visited {
 .arrowChar {
 	font-size: @fontSizeActions * 1.66;
     font-weight: bold;
+}
+
+.arrowCharSupporting {
     color: @grayTextDark;
 }
 
 .arrowCharAgainst {
     color: rgba(204, 0, 8, 0.7); // equal to @red * opacity .7
+}
+
+.arrowCharRelevance {
+    color: @blue;
 }
 
 
@@ -1670,7 +1686,7 @@ a:visited {
 .showRelevance {
     cursor: pointer;
     font-size: @fontSizeActions;
-    font-weight: bold;
+    //font-weight: bold;
     margin-top: 0px;
     margin-bottom:-1px;
    	color: @blue;
